--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="informacion sobre bitcoin" content="toda la informarmacion para aprender que es bitcoin y las criptomonedas">
+    <meta name="keywords" content="bitcoin criptoactivos criptomonedas satoshi BTC Eth bancos descentralizada">
     <title>Document</title>
+
 
 </head>
 
