--- a/pages/comofuncionanlascriptomonedas.html
+++ b/pages/comofuncionanlascriptomonedas.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="como funcionan las criptomonedas" content="entender como funciona la blockchain y el bitcoin">
+    <meta name="keywords" content="blockchain BTC descentralizada red criptoactivos criptografía satoshi cripto">
     <title>Document</title>
 </head>
 
@@ -57,15 +59,15 @@
             </div>
 
             <div class="foto2">
-                <img src="../images/funcion1.jpeg" alt="funcion1" width="300" height="300">
+                <img src="../images/funcion1.jpeg" alt="blockchain" width="300" height="300">
             </div>
 
             <div class="foto3">
-                <img src="../images/funcion2.jpeg" alt="funcion2" width="300" height="300">
+                <img src="../images/funcion2.jpeg" alt="blockchain" width="300" height="300">
             </div>
 
             <div class="foto4">
-                <img src="../images/funcion3.jpeg" alt="funcion3" width="300" height="300">
+                <img src="../images/funcion3.jpeg" alt="blockchain" width="300" height="300">
             </div>
         </div>
 
