--- a/pages/queesbitcoin.html
+++ b/pages/queesbitcoin.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="que es bitcoin?" content="concepto basico de que es Bitcoin">
+    <meta name="keywords" content="concepto BTC bitcoin blockchain descentralizada criptoactivos criptografía criptomoneda">
     <title>Document</title>
 </head>
 
