--- a/pages/queesexactamenteunacriptomoneda.html
+++ b/pages/queesexactamenteunacriptomoneda.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="que es una criptomoneda?" content="concepto basico de que es una criptomoneda">
+    <meta name="keywords" content="cripto criptoactivos criptomoneda Bitcoin Eth Litecoin Cardano Dogecoin">
     <title>Document</title>
 </head>
 
