--- a/index.html
+++ b/index.html
@@ -85,17 +85,23 @@
 
     </main>
 
-
+ 
+    <div>
+        <h1>Enviame un comentario</h1>
+    </div>
     <footer>
-        <ul>
-            <li><a href="https://instagram.com/lucas.ortiz.5661?igshid=MzNlNGNkZWQ4Mg==">Instagram</a> <a href=""></a>
-            </li>
-            <li><a href=""> <a href="https://www.facebook.com/lucas.ortiz.5661?mibextid=ZbWKwL">Facebok</a></a></li>
-        </ul>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/b2uXWNRE7fU" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+       
+       
+        <form action="mailto:coinlistexitos@gmail.com" method="post" enctype="text/plain">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required><br>
+          <label for="correo">Correo Electrónico:</label>
+          <input type="email" id="correo" name="correo" required><br>
+          <label for="comentario">Comentario:</label><br>
+          <textarea id="comentario" name="comentario" rows="4" cols="50" required></textarea><br>
+          <input type="submit" value="Enviar">
+          <input type="reset" value="Limpiar">
+        </form>
 
     </footer>
 
